--- a/app/Business/waiting.erb
+++ b/app/Business/waiting.erb
@@ -1,7 +1,7 @@
 <div data-role="page">
 
 	<div data-role="header" data-position="inline">
-    <h1>Nearest Restaurants</h1>
+    <h1>Nearest</h1>
 	</div>
 
   <div data-role="content">
